[package]
name = "http-client-multipart"
version = "0.1.1"
edition = "2021"
description = "Multipart support for `http-client`"
license = "MIT"

[dependencies]

# Async 
http-types = "2.12.0"
futures-lite = "2.6.0"
async-fs = "2.1.2"
# async-io = "2.4.0"

# Boundary generation
fastrand = "2.3.0"

# Encodings
base64 = "0.22.1"
quoted_printable = "0.5.1"
mime_guess = "2.0.5"

[dev-dependencies]
async-std = { version = "1.13.1", default-features = false, features = ["attributes"] }
http-client = { version = "6.5.3", features = ["h1_client"] }
